<resources>
    <string name="app_name">projectilemes</string>
    <string name="password_field_hint">Пароль</string>
    <string name="schedule_text">Расписание</string>
    <string name="call_text">Вызов</string>
    <string name="barcode_text">QR-код</string>
    <string name="start_adjustment_text">Начать отладку</string>
    <string name="accept_to_work_text">Принять в работу</string>
    <string name="pause_task_text">Остановить</string>
    <string name="continue_task_text">Продолжить</string>
    <string name="done_task_text">Завершить</string>
    <string name="cancel_label_text">Отменить выполнение</string>
    <string name="product_label_text">Номенклатура</string>
    <string name="operation_label_text">Операция</string>
    <string name="amount_label_text">Количество</string>
    <string name="release_input_hint">Выпуск</string>
    <string name="rejection_input_hint">Брак</string>
    <string name="rejection_cause_label_text">Укажите причину брака</string>
    <string name="cancel_button_text">Отметить</string>
    <string name="operation_status_text">Состояние операции</string>
    <string name="sign_in_button_text">Войти</string>
    <string name="cannot_button_label">Отмена</string>
    <string name="quantity_label_str">Количество:</string>
    <string name="order_name_label_str">Заказ:</string>
    <string name="start_date_label_str">Время начала:</string>
    <string name="end_date_label_str">Время окончания:</string>
    <string name="duration_label_str">Длительность:</string>
    <string name="operation_name_label_str">Операция:</string>
    <string name="product_name_label_str">Номенклатура:</string>
    <string name="call_label_text">Вызов помощи</string>
    <string name="call_master_text">Мастер</string>
    <string name="call_service_text">Сервис</string>
    <string name="call_technologist_text">Технолог</string>
    <string name="call_medic_text">Врач</string>
    <string name="call_otk_text">ОТК</string>
    <string name="call_adjuster_text">Наладчик</string>
    <string name="popup_back_text">Отмена</string>
    <string name="no_resource_text">Нет заготовки</string>
    <string name="wc_broken_text">Неисправен станок</string>
    <string name="no_tool_text">Нет инструмента</string>
    <string name="reject_label_text">Укажите причину</string>
    <string name="cancel_reject_text">Отмена</string>
</resources>
