<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_margin="16dp"
        android:layout_height="match_parent"
        >

    <Button
            android:id="@+id/schedule"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/schedule_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/call"
            app:layout_constraintTop_toTopOf="parent"
            />

    <Button
            android:id="@+id/call"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/call_text"
            app:layout_constraintEnd_toStartOf="@+id/barcode"
            app:layout_constraintStart_toEndOf="@id/schedule"
            app:layout_constraintTop_toTopOf="parent"
            />

    <Button
            android:id="@+id/barcode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/barcode_text"
            app:layout_constraintStart_toEndOf="@id/call"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

    <android.support.constraint.Guideline
            android:id="@+id/labels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="133dp"
            />

    <TextView
            android:id="@+id/product_label"
            style="@style/LabelsStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_label_text"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@id/schedule"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            />

    <TextView
            android:id="@+id/product_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Изделие 883894"
            app:layout_constraintTop_toTopOf="@id/product_label"
            app:layout_constraintStart_toStartOf="@+id/labels"
            />

    <TextView
            android:id="@+id/operation_label"
            style="@style/LabelsStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/operation_label_text"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@id/product_label"
            app:layout_constraintStart_toStartOf="parent"

            />

    <TextView
            android:id="@+id/operation_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="40 Плоскошлифовальная"
            app:layout_constraintStart_toEndOf="@id/labels"
            app:layout_constraintTop_toTopOf="@id/operation_label"
            />

    <TextView
            android:id="@+id/amount_label"
            style="@style/LabelsStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount_label_text"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@id/operation_label"
            app:layout_constraintStart_toStartOf="parent"
            />

    <TextView
            android:id="@+id/amount_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="26"
            app:layout_constraintStart_toEndOf="@id/labels"
            app:layout_constraintTop_toTopOf="@id/amount_label"
            />

    <TextView
            android:id="@+id/operation_status_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            tools:text="Выполняется"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/amount_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

    <TextView
            android:id="@+id/cancel_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/LabelsStyle"
            android:text="@string/cancel_label_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="48dp"
            app:layout_constraintTop_toBottomOf="@id/operation_status_label"
            />

    <android.support.design.widget.TextInputLayout
            android:id="@+id/release_layout"
            android:layout_width="184dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/rejection_layout"
            app:layout_constraintTop_toBottomOf="@id/cancel_label"
            >

        <EditText
                android:id="@+id/processed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/release_input_hint"
                android:inputType="number"
                android:singleLine="true"
                android:text="0"
                />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/rejection_layout"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            app:layout_constraintStart_toEndOf="@id/release_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cancel_label"
            >

        <EditText
                android:id="@+id/quarantine"
                android:layout_width="184dp"
                android:layout_height="wrap_content"
                android:hint="@string/rejection_input_hint"
                android:inputType="number"
                android:singleLine="true"
                android:text="0"
                />
    </android.support.design.widget.TextInputLayout>

    <TextView
            android:id="@+id/rejection_cause_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="20sp"
            android:text="@string/rejection_cause_label_text"
            app:layout_constraintTop_toBottomOf="@id/release_layout"
            app:layout_constraintStart_toStartOf="parent"
            />

    <Spinner
            android:id="@+id/rejection_cause"
            android:layout_width="148dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/rejection_cause_label"
            app:layout_constraintStart_toEndOf="@id/rejection_cause_label"
            app:layout_constraintEnd_toEndOf="parent"
            />

    <Button
            android:id="@+id/stage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_button_text"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/rejection_cause_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

    <TextView
            android:id="@+id/operation_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/LabelsStyle"
            android:text="@string/operation_status_text"
            app:layout_constraintBottom_toTopOf="@id/start_adjustment"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

    <Button
            android:id="@+id/cannot"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cannot_button_label"
            app:layout_constraintBottom_toTopOf="@id/pause_task"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/start_adjustment"
            />

    <Button
            android:id="@+id/start_adjustment"
            android:text="@string/start_adjustment_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/pause_task"
            app:layout_constraintStart_toEndOf="@id/cannot"
            app:layout_constraintEnd_toStartOf="@id/accept_to_work"
            />

    <Button
            android:id="@+id/accept_to_work"
            android:text="@string/accept_to_work_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/pause_task"
            app:layout_constraintStart_toEndOf="@id/start_adjustment"
            app:layout_constraintEnd_toEndOf="parent"
            />

    <Button
            android:id="@+id/pause_task"
            android:text="@string/pause_task_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/continue_task"
            />

    <Button
            android:id="@+id/continue_task"
            android:text="@string/continue_task_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/pause_task"
            app:layout_constraintEnd_toStartOf="@id/done_task"
            />

    <Button
            android:id="@+id/done_task"
            android:text="@string/done_task_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/continue_task"
            app:layout_constraintEnd_toEndOf="parent"
            />
</android.support.constraint.ConstraintLayout>