<?xml version="1.0" encoding="utf-8"?>
<GridLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:orientation="vertical"
        android:rowCount="7"
        android:layout_margin="8dp"
        >

    <TextView
            android:id="@+id/operation_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/operation_name_label_str"
            android:layout_column="0"
            android:layout_row="0"
            />


    <TextView
            android:id="@+id/product_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_name_label_str"
            android:layout_column="0"
            android:layout_row="1"
            />


    <TextView
            android:id="@+id/operation_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Расточная"
            android:layout_column="1"
            android:layout_row="0"
            />

    <TextView
            android:id="@+id/product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Продукт №1"
            android:layout_column="1"
            android:layout_row="1"
            />

    <TextView
            android:id="@+id/quantity_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity_label_str"
            android:layout_column="0"
            android:layout_row="2"
            />

    <TextView
            android:id="@+id/quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="10"
            android:layout_column="1"
            android:layout_row="2"
            />

    <TextView
            android:id="@+id/order_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_name_label_str"
            android:layout_column="0"
            android:layout_row="3"
            />

    <TextView
            android:id="@+id/order_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Заказ №1"
            android:layout_column="1"
            android:layout_row="3"
            />

    <TextView
            android:id="@+id/start_date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_date_label_str"
            android:layout_column="0"
            android:layout_row="4"
            />

    <TextView
            android:id="@+id/start_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="4"
            tools:text="10:00"
            />

    <TextView
            android:id="@+id/end_date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_date_label_str"
            android:layout_column="0"
            android:layout_row="5"
            />

    <TextView
            android:id="@+id/end_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="12:00"
            android:layout_column="1"
            android:layout_row="5"
            />

    <TextView
            android:id="@+id/duration_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/duration_label_str"
            android:layout_column="0"
            android:layout_row="6"
            />

    <TextView
            android:id="@+id/duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="2:00"
            android:layout_column="1"
            android:layout_row="6"
            />

</GridLayout>
