<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activities.SignInActivity">

    <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/projectile"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"/>

    <Spinner
            android:id="@+id/username"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
    />

    <Spinner android:id="@+id/workcenter"
             android:layout_width="260dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
             app:layout_constraintTop_toBottomOf="@+id/username"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
    />

    <android.support.design.widget.TextInputLayout
            android:id="@+id/password_layout"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/workcenter"
    >
        <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_field_hint"
                android:inputType="textPassword"
                android:singleLine="true"/>

    </android.support.design.widget.TextInputLayout>

    <Button android:id="@+id/barcode_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/barcode_text"
            app:layout_constraintTop_toBottomOf="@+id/password_layout"
            app:layout_constraintStart_toEndOf="@+id/sign_in"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="@+id/password_layout"
    />

    <Button android:id="@+id/sign_in"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:text="@string/sign_in_button_text"
            app:layout_constraintTop_toBottomOf="@+id/password_layout"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/barcode_button"
            app:layout_constraintStart_toStartOf="@+id/password_layout"
    />

</android.support.constraint.ConstraintLayout>